fix navbar visibility

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
   position: fixed;
   top: 0%;
   right: 0%;
+  background-color: rgb(235, 208, 173);
 }
 
 a{
